Web Inspector: Dark Mode: Media query names are unreadable https://bugs.webkit.org/show_bug.cgi?id=186974
Reviewed by Brian Burg.

Change media query names from dark blue to light blue.

* UserInterface/Views/DarkMode.css:
(@media (prefers-dark-interface)):
(.CodeMirror .CodeMirror-lines .CodeMirror-matchingbracket):
(.cm-s-default .cm-attribute):


Canonical link: https://commits.webkit.org/202245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233154 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/DarkMode.css
+++ b/Source/WebInspectorUI/UserInterface/Views/DarkMode.css
@@ -662,8 +662,17 @@
         color: var(--syntax-highlight-link-color);
     }
 
+    .CodeMirror .CodeMirror-lines .CodeMirror-matchingbracket {
+        background-color: hsla(232, 100%, 72%, 0.4);
+        border-bottom-color: hsl(206, 100%, 65%);
+    }
+
 
     /* SyntaxHighlightingDefaultTheme.css */
+    .cm-s-default .cm-attribute {
+        color: hsl(222, 100%, 72%);
+    }
+
     .cm-s-default .cm-m-xml.cm-attribute,
     .syntax-highlighted .html-attribute-name {
         color: hsl(27, 100%, 80%);
